--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -24,7 +24,28 @@
     z-index: 100; 
     
 } */
-.services-three__single-icon .inner {
+
+
+
+.projects-three__carousel {
+    height: 550px; 
+  }
+  
+
+
+/* .swiper{
+    margin-top: 480px 0 0;
+    padding:10px;
+}
+
+
+.projects-three-brand{ 
+    margin-top: 480px;
+    height:10vh;
+    max-width: 1530px;
+    width: 100%;
+} */
+/* .services-three__single-icon .inner {
     position: relative;
     display: flex;
     align-items: center;
@@ -50,7 +71,17 @@
     height: 521px;
     margin-bottom: 30px;
     z-index: 1;
-}
+} */
+
+
+
+
+
+
+
+
+
+
 
 /* .sidebar {
     transition: all 0.3s ease-in-out;
