--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10880,7 +10880,125 @@ Projects Three
 .projects-three__carousel.owl-carousel .owl-nav.disabled {
   display: block;
 }
+/* //------------------------------------------------------------------------------------------- */
 
+.projects-threeTwo__carousel.owl-carousel  {
+  display: block;
+  height: 130px;
+}
+
+.projects-threeTwo__single {
+  position: relative;
+  display: block;
+}
+
+.projects-threeTwo__single.mt45 {
+  margin-top: 45px;
+}
+
+.projects-threeTwo__single-img {
+  position: relative;
+  display: block;
+  width: 230px;
+  overflow: hidden;
+  /* border-radius: 10px; */
+}
+
+
+.projects-threeTwo__single-img::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition-delay: .1s;
+  transition-timing-function: ease-in-out;
+  transition-duration: .7s;
+  transition-property: all;
+  background: rgba(var(--thm-base-rgb), 0.5);
+  opacity: 0;
+  z-index: 1;
+  content: "";
+}
+
+.projects-threeTwo__single:hover .projects-threeTwo__single-img::before {
+  opacity: 1;
+}
+
+
+.projects-threeTwo__single-img img {
+  width: 100%;
+  transition: .5s ease;
+  transform: scale(1.05);
+}
+
+.projects-threeTwo__single:hover .projects-threeTwo__single-img img {
+  transform: scale(1);
+}
+
+.projects-threeTwo__single-img .overlay-content {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  bottom: 100px;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  width: max-content;
+  text-align: center;
+  padding: 0px 23px 0px 19px;
+  z-index: 5;
+  -webkit-transform: perspective(400px) rotateY(40deg) scaleY(0.7);
+  -ms-transform: perspective(400px) rotateY(40deg) scaleY(0.7);
+  transform: perspective(400px) rotateY(40deg) scaleY(0.7);
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  transition-delay: .1s;
+  transition-timing-function: ease-in-out;
+  transition-duration: .5s;
+  transition-property: all;
+  opacity: 0;
+}
+
+.projects-threeTwo__single:hover .projects-threeTwo__single-img .overlay-content {
+  -webkit-transform: perspective(400px) rotateY(0deg) scaleY(1.0);
+  -ms-transform: perspective(400px) rotateY(0deg) scaleY(1.0);
+  transform: perspective(400px) rotateY(0deg) scaleY(1.0);
+  transition-delay: .1s;
+  transition-timing-function: ease-in-out;
+  transition-duration: .7s;
+  transition-property: all;
+  opacity: 1;
+}
+
+
+.projects-threeTwo__single-img .overlay-content::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(var(--thm-primary-rgb), 0.9);
+  clip-path: polygon(0 0, 100% 5%, 100% 94%, 0% 100%);
+  content: "";
+}
+
+.projects-threeTwo__single-img .overlay-content h2 {
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  text-transform: capitalize;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  transform: rotate(180deg);
+  width: max-content;
+  text-align: center;
+}
+
+.projects-threeTwo__single-img .overlay-content h2 a {
+  color: #ffffff;
+}
+/* //--------------------------------------------------------------------------------------- */
 .projects-three .owl-theme .owl-nav {
   position: absolute;
   margin-top: 0;
@@ -10923,8 +11041,8 @@ Projects Three
   position: relative;
   display: block;
  
-  /* padding: 144px 0 0px; */
-  padding: 591px 0 0px;
+  padding: 144px 0 0px;
+  /* padding: 591px 0 0px; */
   z-index: 2;
 }
 .swiper-wrapper {
