--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,7 +29,13 @@
   --thm-black-rgb: 18, 51, 22;
 }
 
+.icon-call:before {
+  content: "\e93e";
+}
 
+.icon-youtube:before {
+  content: "\ea9d" /* This Unicode may vary */
+}
 
 
 .auto-container {
@@ -422,7 +428,7 @@ li {
   border-radius: 5px;
   padding: 0px 45px 0px;
   line-height: 65px;
-  right: 55px;
+  /* right: 55px; */
   color: #ffffff;
   font-size: 18px;
   font-weight: 600;
@@ -435,7 +441,7 @@ li {
 }
 
 
-/* .thm-btn:before {
+.thm-btn:before {
   position: absolute;
   top: 0%;
   left: 0%;
@@ -447,7 +453,7 @@ li {
   transition: all .5s;
   z-index: -1;
   border-radius: 5px;
-} */
+}
 
 .thm-btn:hover:before {
   transform: rotateX(90deg);
@@ -3622,6 +3628,7 @@ Main Slider Three
   opacity: 1;
   -webkit-transform: translateX(0);
   transform: translateX(0);
+  right:55px;
   -webkit-transition-delay: 2000ms;
   transition-delay: 2000ms;
 }
@@ -6579,20 +6586,21 @@ Footer One
 .footer-one__right-bottom-contact {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items:end;
   margin-left: 90px;
 }
 
-.footer-one__right-bottom-contact .icon-box {
+.footer-one__right-bottom-contact .icon-box{
   position: relative;
   display: block;
+  bottom: 8px;
 }
 
 .footer-one__right-bottom-contact .icon-box span:before {
   position: relative;
   display: inline-block;
   color: rgba(255, 255, 255, .5);
-  font-size: 50px;
+  font-size: 20px;
 }
 
 .footer-one__right-bottom-contact .content-box {
@@ -9525,6 +9533,7 @@ Services Three
 .services-three__top-text {
   position: relative;
   display: block;
+  color: white;
   max-width: 500px;
   width: 100%;
   padding-left: 35px;
