--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -3217,4 +3217,84 @@
             content: "";
             z-index: -1;
         }
+        a.sc-hLBbgP {
+            display: block;
+            /* padding-top: 10px; */
+            padding-top: 0px;
+            color: #fff;
+        }
+
+        /* .services-three__single-icon .inner {
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 90vw;
+            /* height: 120px; */
+            /* background: var(--thm-black); */
+            /* border-radius: 50%; */
+        /* }  */
+
+        .mobile-nav__contact li>a>span{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 30px;
+            height: 30px;
+            border-radius: 0%;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            font-size: 12px;
+            margin-right: 10px;
+        }
+        .mobile-nav__contact li a {
+            align-items: center;
+            color: #ffffff;
+            display: flex;
+            -webkit-transition: 500ms;
+            transition: 500ms;
+        }
+        .services-three__single {
+            position: relative;
+            /* display: block; */
+            background: #ffffff;
+            padding: 60px 0px 0px;
+            overflow: hidden;
+            margin-bottom: 30px;
+            z-index: 1;
+        }
+        .services-two__single-img .inner {
+            position: relative;
+            display: block;
+            width: 80vw;
+            overflow: hidden;
+            border-radius: 4px;
+            border-bottom-right-radius: 0px;
+            z-index: 1;
+        }
+
+        .services-three__single-icon {
+            position: static;
+            display: block;
+            width: 271px;
+            right: 30px;
+            margin-bottom: 90px;
+        }
+        .row>* {
+            flex-shrink: 0;
+            width: 100%;
+            width: 290px;
+            overflow: hidden;
+        }
+        .row {
+            --bs-gutter-x: 1.5rem;
+            --bs-gutter-y: 0;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: calc(var(--bs-gutter-y)* -1);
+            margin-right: calc(var(--bs-gutter-x) / -2);
+            margin-left: calc(var(--bs-gutter-x) / -2);
+        }
 }
