--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -3334,4 +3334,9 @@
             display: block;
             bottom: 27px;
         }
+
+        .nice-select.wide {
+            width: 100%;
+            height: 53px;
+        }
 }
