--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11811,10 +11811,40 @@ Free Quote One
   position: relative;
   display: block;
   width: 100%;
-  height: 60px; /* Default height */
+  height: 70px; /* Default height */
   transition: height 0.3s ease;
 }
 
+
+.nice-select {
+  -webkit-tap-highlight-color: transparent;
+  background-color: #fff;
+  border-radius: 5px;
+  border: solid 1px #e8e8e8;
+  box-sizing: border-box;
+  clear: both;
+  cursor: pointer;
+  display: block;
+  float: left;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: normal;
+  height: 54px;
+  line-height: 50px;
+  outline: none;
+  padding-left: 27px;
+  padding-right: 30px;
+  position: relative;
+  text-align: left !important;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  white-space: nowrap;
+  width: auto;
+}
 /* Make the select element taller on focus to show all options */
 .select-box select.selectmenu.wide {
   width: 100%;
