--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -2496,7 +2496,7 @@
     .main-header-three .main-header-three__left {
         line-height: 0;
         position: absolute;
-        top: 49px;
+        top: 30px;
         right: 0;
     }
 
@@ -2508,7 +2508,7 @@
     }
 
     .main-header-three {
-        padding: 0px 0px 124px;
+        padding: 0px 0px 90px;
     }
 
     /*Main Slider Three*/
@@ -2630,6 +2630,11 @@
     /*Counter One*/
     .counter-one__single::before {
         display: none;
+    }
+    .main-header-three {
+        
+        padding: 0px 0px 80px;
+     
     }
 
     .counter-one__box li.counter-one__single {
@@ -3104,6 +3109,44 @@
 
 
 @media only screen and (min-width:300px) and (max-width:1024px) {
+    .contact-page-bottom__content-img .contact-info ul li .inner .content-box {
+        position: relative;
+        display: block;
+        margin-left: 3px;
+    }
+  
+    .thm-btn {
+        position: relative;
+        display: inline-block;
+        border-radius: 5px;
+        padding: 0px 45px 0px;
+        line-height: 65px;
+        /* right: 55px; */
+        color: #ffffff;
+        height: 65px;
+        font-size: 18px;
+        font-weight: 600;
+        background: var(--thm-black);
+        overflow: hidden;
+        font-family: var(--thm-font);
+        text-transform: capitalize;
+        /* transition: all 0.5s ease-in-out 0.2s; */
+        z-index: 1;
+    }
+
+    .about-three__content {
+        position: relative;
+        display: block;
+        margin-left: 50px;
+        margin-top: 40px;
+      }
+      .about-three__content {
+        position: relative;
+        display: block;
+        margin: 40px auto 0 auto; /* Top margin and center horizontally */
+        max-width: 900px; /* Optional: control how wide it spreads */
+      }
+      
     .row.filter-layout.masonary-layout {
         display: flex ;
         flex-wrap:wrap;
@@ -3259,7 +3302,7 @@
             position: relative;
             /* display: block; */
             background: #ffffff;
-            padding: 60px 0px 0px;
+            padding: 0px 0px 0px;
             overflow: hidden;
             margin-bottom: 30px;
             z-index: 1;
@@ -3274,20 +3317,75 @@
             z-index: 1;
         }
 
-        .services-three__single-icon {
+        /* .services-three__single-icon {
             position: static;
             display: block;
             width: 271px;
             right: 30px;
             margin-bottom: 90px;
-        }
+        } */
+
+
+        /* Make the container responsive */
+.services-three__single-icon {
+    width: 100%;
+    margin-bottom: 40px;
+    right: 0; /* Remove offset for mobile */
+    display: flex;
+    justify-content: center;
+  }
+  
+  /* Ensure inner container is flexible */
+  /* .services-three__single-icon .inner {
+    width: 100%;
+    max-width: 250px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
+
+
+
+  .services-three__single-icon .inner {
+    width: 100%;
+    max-width: 250px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+
+  .services-three__single-icon .inner img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px; /* optional: for aesthetics */
+  }
+
+
+  
+  /* Make the image fully responsive */
+  .services-three__single-icon .inner img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px; /* optional: for aesthetics */
+  }
+  
         .row>* {
             flex-shrink: 0;
             width: 100%;
             width: 290px;
             overflow: hidden;
         }
+        /* // update */
         .row {
+
+            text-align: center;
             --bs-gutter-x: 1.5rem;
             --bs-gutter-y: 0;
             display: flex;
@@ -3298,6 +3396,22 @@
             margin-left: calc(var(--bs-gutter-x) / -2);
         }
 
+      
+
+.single-box ul li:nth-child(3) {
+  margin-right: 12px; /* Adjust value as needed */
+}
+
+
+
+
+.single-box ul li:nth-child(1) {
+    margin-left: 8px;
+}
+
+.single-box ul li:nth-child(4) {
+    margin-left: 8px;
+}
         .contact-page-bottom__content-img {
             position: relative;
             display: block;
@@ -3319,11 +3433,14 @@
           .service_select_box {
             height: 250px;
           }
-          .col-xl-6  .service_select_box{
+          .col-xl-6 .service_select_box{
             flex: 0 0 auto;
             width: 100%;
         }
+        .col-xl-6{
 
+            width: 100%;
+        }
         .services-three__single-content {
             position: relative;
             display: block;
@@ -3339,4 +3456,5 @@
             width: 100%;
             height: 53px;
         }
+    
 }
