--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2635,6 +2635,7 @@ Main Header Three
   position: sticky; /* Change from relative to sticky */
   top: 0; /* Stick to the top */
   display: block;
+  height:6rem;
   background: var(--thm-black);
   z-index: 10;
 }
@@ -2661,6 +2662,7 @@ Main Header Three
 .main-header-three__left {
   position: relative;
   display: block;
+  bottom: 15px;
 }
 
 .main-header-three .main-menu .main-menu__list>li>a,
@@ -2692,6 +2694,7 @@ Main Header Three
   background: var(--thm-base);
   transition: all 0.4s ease-in-out 0.3s;
   height: 20px;
+  top: 35px;
 }
 
 .main-header-three .main-menu .main-menu__list>li>a .line::before {
@@ -2747,11 +2750,13 @@ Main Header Three
 .main-header-three__middle .logo-box-one {
   position: relative;
   display: block;
-  padding: 43px 20px 42px;
+  /* padding: 43px 20px 42px; */
+  padding: 20px 20px 20px;
   z-index: 1;
    /* float: center; */
   /* right: 17px; */
   left: 37%;
+  bottom: 15px;
 }
 
 .main-header-three__middle .logo-box-one::before {
@@ -2769,6 +2774,7 @@ Main Header Three
   position: relative;
   display: flex;
   align-items: center;
+  bottom: 15px;
 }
 
 .main-header-three__right-contact {
@@ -6571,6 +6577,9 @@ Footer One
 
 .footer-one__right-single-contact .foot-contact{
    color: rgba(255, 255, 255, .5);
+   display: flex;
+    gap: 10px;
+    align-items: center;
    
 }
 
@@ -6579,6 +6588,9 @@ Footer One
   
  
 } */
+
+
+
 
 
 
@@ -6761,7 +6773,7 @@ Footer One
   align-items: center;
   justify-content: space-between;
   background: rgba(255, 255, 255, .1);
-  padding: 30px 45px 30px;
+  padding: 20px 45px 20px;
 }
 
 .footer-one__bottom .bottom-inner .copyright {
@@ -6769,9 +6781,22 @@ Footer One
   display: block;
 }
 
-.footer-one__bottom .bottom-inner .copyright p {
+.footer-one__bottom .bottom-inner .copyright a {
+  margin: 2px;
+  padding-left: 3px;
+  color: rgba(255, 255, 255, .5);
+  
+
+}
+.footer-one__bottom .bottom-inner .copyright a:hover {
+  transition: all 300ms linear;
+ color: #ffffff;
+  text-decoration: underline;
+}
+.footer-one__bottom .bottom-inner .copyright p{
   color: rgba(255, 255, 255, .5);
   font-size: 16px;
+  
   line-height: 26px;
   font-weight: 500;
 }
@@ -9388,6 +9413,7 @@ Features Two
 About Three
 =====================================================
 ***/
+
 .about-three {
   position: relative;
   display: block;
@@ -9672,7 +9698,8 @@ Services Three
   position: relative;
   display: block;
   background: #ffffff;
-  padding: 45px 30px 35px;
+  /* padding: 45px 30px 35px; */
+  padding: 0px 0px 35px;
   overflow: hidden;
   margin-bottom: 30px;
   z-index: 1;
@@ -9748,9 +9775,16 @@ Services Three
   transform: scale(0.9);
 }
 
-.services-three__single-content {
+/* .services-three__single-content {
   position: relative;
   display: block;
+} */
+
+.services-three__single-content {
+  position: relative;
+  width: 250px;
+  display: block;
+  left: 12px;
 }
 
 .services-three__single-content .title {
@@ -11857,9 +11891,15 @@ Free Quote One
   height: 250px;
 } */
 
-.col-xl-6 {
+/* .col-xl-6 {
   flex: 0 0 auto;
   width: 100%;
+} */
+
+
+.col-xl-6 {
+  flex: 0 0 auto;
+  width: 50%;
 }
 
 .free-quote-one__content-form .input-box .nice-select {
